bug 434997 remove gconf dependency from crashreporter client r=ted a192=bsmedberg